# path-tree-generator

./: LICENSE  README.md  pyproject.toml
examples/: simple_example.py
path_tree_generator/: __init__.py  path_tree.py  path_tree_generator.py
path_tree_generator/models/: __init__.py  list_entries.py  model.py
tests/: conftest.py  test_path_tree.py  test_path_tree_generator.py
tests/data/: data-with-stat.json  data.json  data.tree
tests/data/myDirectory-2/subdirectory2/: myFile.txt
tests/models/: test_entries.py  test_list.py
tree_generator/models/: model.py
