[tool.poetry]
name = "path-tree-generator"
version = "0.0.1-alpha.1"
description = "Generating a linux (console) like path tree for humans, with the ability for converting it to json"
authors = ["DL6NM <mail@dl6nm.de>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/dl6nm/path-tree-generator"
keywords = ["path", "tree", "generator", "json", "converter"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.9.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-datadir = "^1.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

